fix(*): fixed dark mode dropdowns

--- a/packages/bottom-sheet/src/components/header/index.module.css
+++ b/packages/bottom-sheet/src/components/header/index.module.css
@@ -1,7 +1,7 @@
 @import '../../../../themes/src/default.css';
 
 :root {
-    --bottom-sheet-header-border-bottom: 1px solid var(--color-light-border-primary);
+    --bottom-sheet-header-border-bottom: 1px solid var(--color-light-border-secondary);
     --bottom-sheet-footer-background-color: var(--color-light-bg-primary);
     --bottom-sheet-title-font-size: 18px;
     --bottom-sheet-title-font-weight: 700;
